<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvpay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/pay" />

    <TextView
        android:id="@+id/tvpay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvpay1"
        android:layout_marginTop="52dp"
        android:text="@string/via" />

    <RadioButton
        android:id="@+id/meth1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvpay2"
        android:layout_marginTop="36dp"
        android:layout_toRightOf="@+id/tvpay2"
        android:text="@string/mp" />

    <RadioButton
        android:id="@+id/meth2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/meth1"
        android:layout_centerVertical="true"
        android:text="@string/cash" />

    <Button
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/meth2"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="69dp"
        android:text="@string/Pay" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pay"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/pay"
        android:text="@string/bk" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/back"
        android:text="@string/hm" />

</RelativeLayout>