<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <TextView
        android:id="@+id/tvwlc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="21dp"
         android:text="@string/wlc"  />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignRight="@+id/tvwlc"
        android:layout_below="@+id/tvwlc"
        android:layout_marginTop="25dp"
        android:text="@string/reg"
        android:visibility="gone" />

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvwlc"
        android:layout_alignRight="@+id/egeza"
        android:layout_below="@+id/egeza"
        android:layout_marginTop="78dp"
        android:text="@string/details" />

    <Button
        android:id="@+id/egeza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvwlc"
        android:layout_alignRight="@+id/register"
        android:layout_below="@+id/register"
        android:layout_marginTop="64dp"
        android:text="@string/eGeza" />

</RelativeLayout>